# intel-aes

./: .gitignore  CHANGELOG  LICENSE  Makefile  README  Setup.hs  SimpleRNGBench.hs  TODO.txt  benchmark-intel-aes-rng.hs  intel-aes.cabal  results.txt
Benchmark/: BinSearch.hs
Codec/Crypto/: ConvertRNG.hs  GladmanAES.hsc  IntelAES.hs
Codec/Crypto/IntelAES/: AESNI.hs  GladmanAES.hsc
Codec/Encryption/: AES.hs  AESAux.hs  BurtonRNG.hs  BurtonRNGSlow.hs
Data/: LargeWord.hs
System/Random/: AES.hs
System/Random/AES/: Tests.hs
cbits/: Makefile  c_test.c
cbits/Intel_AESNI_Sample_Library_v1.0/: mk_lnx.sh  mk_lnx64_all.sh  mk_lnx86_all.sh  mk_win.bat  mk_win64_all.bat  mk_win86_all.bat
cbits/Intel_AESNI_Sample_Library_v1.0/intel_aes_lib/: Makefile  mk_lnx_bin.sh  mk_lnx_bin64.sh  mk_lnx_bin86.sh  mk_lnx_lib.sh  mk_lnx_lib64.sh  mk_lnx_lib86.sh  mk_win_bin.bat  mk_win_bin64.bat  mk_win_bin86.bat  mk_win_lib.bat  mk_win_lib64.bat  mk_win_lib86.bat
cbits/Intel_AESNI_Sample_Library_v1.0/intel_aes_lib/include/: iaes_asm_interface.h  iaesni.h
cbits/Intel_AESNI_Sample_Library_v1.0/intel_aes_lib/src/: aessample.c  aessampletiming.cpp  intel_aes.c
cbits/gladman/: ctr_inc.c  ctr_inc.h
cbits/prebuilt/: libintel_aes_darwin_x86_64.dylib
