Name:           intel-aes
Version:        0.1.1

License:                BSD3
License-file:           LICENSE
Stability:              Beta
Maintainer:		Ryan Newton <rrnewton@gmail.com>
Author:			Ryan Newton <rrnewton@gmail.com>, Svein Ove Aas <svein.ove@aas.no>, Thomas M. DuBuisson
Copyright:              Copyright (c) 2011 Intel Corporation
Synopsis: Hardware accelerated AES encryption and RNG.
Description: 
             AES encryption with hardware acceleration.  Plus,
             statistically sound, splittable random number generation based on AES.

Category: Cryptography
Cabal-Version: >=1.8
Tested-With: GHC == 7.0.1
-- Portability:            Untested on Windows.

build-type: Custom

extra-source-files:
      cbits/Intel_AESNI_Sample_Library_v1.0/intel_aes_lib/Makefile
    , cbits/Intel_AESNI_Sample_Library_v1.0/intel_aes_lib/asm/x64/do_rdtsc.s
    , cbits/Intel_AESNI_Sample_Library_v1.0/intel_aes_lib/asm/x64/iaesx64.s
    , cbits/Intel_AESNI_Sample_Library_v1.0/intel_aes_lib/asm/x86/do_rdtsc.s
    , cbits/Intel_AESNI_Sample_Library_v1.0/intel_aes_lib/asm/x86/iaesx86.s
    , cbits/Intel_AESNI_Sample_Library_v1.0/intel_aes_lib/include/iaes_asm_interface.h
    , cbits/Intel_AESNI_Sample_Library_v1.0/intel_aes_lib/include/iaesni.h
    , cbits/Intel_AESNI_Sample_Library_v1.0/intel_aes_lib/mk_lnx_lib.sh
    , cbits/Intel_AESNI_Sample_Library_v1.0/intel_aes_lib/mk_win_lib.bat
    , cbits/Intel_AESNI_Sample_Library_v1.0/intel_aes_lib/src/aessample.c
    , cbits/Intel_AESNI_Sample_Library_v1.0/intel_aes_lib/src/aessampletiming.cpp
    , cbits/Intel_AESNI_Sample_Library_v1.0/intel_aes_lib/src/intel_aes.c
    , cbits/Intel_AESNI_Sample_Library_v1.0/intel_aes_lib/where_files_come_from_and_license.txt
    , cbits/Makefile
    , cbits/c_test.c

    -- And including the gladman implementation for now as well:
    , cbits/gladman/aes.h, cbits/gladman/aesopt.h, cbits/gladman/aestab.h
    , cbits/gladman/brg_endian.h, cbits/gladman/brg_types.h, cbits/gladman/aes.txt
    , cbits/gladman/aes_via_ace.h, cbits/gladman/ctr_inc.h


source-repository head
  type:     git
  location: git://github.com/rrnewton/intel-aes.git


----------------------------------------------------------------------------------------------------
library
  build-depends:  base, random, DRBG, split, process, haskell98, time,
                  DRBG, crypto-api, bytestring, cereal, tagged

  exposed-modules:  Codec.Encryption.BurtonRNGSlow
                 ,  Codec.Crypto.IntelAES
                 ,  Codec.Crypto.GladmanAES
  other-modules:    Data.LargeWord 
                 ,  Benchmark.BinSearch
                 ,  Codec.Encryption.AES
                 ,  Codec.Encryption.AESAux
                 ,  Codec.Utils
  GHC-Options: -O2 
  -- I can't get it to link this with an absolute path:
  extra-libraries: intel_aes
  extra-lib-dirs: /opt/intel-aes/cbits/
  ld-options: -Wl,-rpath=/opt/intel-aes/cbits/

  C-sources: cbits/gladman/aescrypt.c, cbits/gladman/aeskey.c, cbits/gladman/aestab.c,
             cbits/gladman/aes_modes.c, cbits/gladman/ctr_inc.c
  Include-Dirs: cbits


--  ld-options: cbits/intel_aes64.a
--  install-includes: cbits/intel_aes64.a
--  C-sources: 
--             cbits/intel_aes.c
-- It does seem to call the assembler... but not correctly... probably doesn't handle intel syntax:
--            , cbits/iaesx64.s 
           --   cbits/intel_aes.c
           -- , cbits/do_rdtsc.s

--           , cbits/iaesni.h
--           , cbits/iaes_asm_interface.h
           -- , cbits/include/iaesni.h
           -- , cbits/include/iaes_asm_interface.h



-- ----------------------------------------------------------------------------------------------------
Executable benchmark-intel-aes-rng
  Main-is:        SimpleRNGBench.hs
  Build-Depends:  base, split, rdtsc, unix, random, crypto-api, DRBG,
                  tagged, cereal, bytestring, process, haskell98, time, intel-aes
  GHC-Options:    -O2 -threaded -rtsopts 
  C-sources:	   cbits/c_test.c
--                 , cbits/libintel_aes.a
  Include-dirs:    cbits
--  extra-libraries: intel_aes
--  extra-lib-dirs: /home/newton/intel-aes/cbits/
--  ld-options: cbits/libintel_aes.a
--  ld-options: -L/home/newton/intel-aes/cbits/

----------------------------------------
--  ld-options: -L/home/newton/intel-aes/cbits  intel_aes64.a
--  ld-options: cbits/intel_aes64.a

--  cabal haddock --hoogle --executables --hyperlink-source --haddock-options="--html"
